--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
       <div class="logo"></div>
       <div class="btn-wrapper"></div>
+      <div>ihor</div>
     </header>
     <main>
       <div class="users"></div>
