--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
       <div class="logo"></div>
       <div class="btn-wrapper"></div>
-      <div>ihor</div>
     </header>
     <main>
       <div class="users"></div>
@@ -18,5 +17,11 @@
       <div class="cars"></div>
     </main>
     <footer></footer>
+    <script src="js/functions.js"></script>
+    <script src="js/Product.js"></script>
+    <script src="js/User.js"></script>
+    <script src="js/Auto.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
