Сделал функции для отрисовки меню и для отрисовки списка елементов массива

--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto-app</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="logo">
+        <img src="images/auto.png" alt="auto">
+      </div>
       <div class="btn-wrapper"></div>
     </header>
     <main>
-      <div class="users"></div>
+      <!-- <div class="users"></div>
       <div class="products"></div>
-      <div class="cars"></div>
+      <div class="cars"></div> -->
     </main>
     <footer></footer>
+    <script src="js/createDOMelements.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/Product.js"></script>
     <script src="js/User.js"></script>
