сделана кнопка edit для продуктов

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         <p>
           <input type="text" name="description" placeholder="Description" />
         </p>
+        <p>
+          <input type="button" class="save_info_button" value="save">
+          <input type="button" class="back_to_list_button" value="back">
+        </p>
       </form>
     </template>
     <template id="auto-template">
