стили и немного логики для кнопок

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <input type="text" name="price" placeholder="Price" />
           </p>
           <p>
-            <input type="text" name="characteristics" placeholder="Description" />
+            <textarea name="characteristics" placeholder="Description"></textarea>
           </p>
           <p>
             <input type="button" class="save_info_button" value="save">
@@ -100,11 +100,7 @@
             </select>
           </p>
           <p>
-            <textarea
-              name="characteristics"
-              placeholder="Characteristics"
-            >
-            </textarea>
+            <textarea name="characteristics" placeholder="Characteristics"></textarea>
           </p>
           <p>
             <input type="button" class="save_info_button" value="save">
