--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto-app</title>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -15,8 +15,7 @@
         </div>
         <div class="btn-wrapper"></div>
       </header>
-      <main class="center">
-      </main>
+      <main class="center"></main>
       <template id="user-template">
         <form action="" class="user-form" name="user-form">
           <p>
@@ -31,7 +30,7 @@
             <input required type="text" name="lastname" placeholder="Last name" />
           </p> -->
           <p>
-            <input required type="number" name="age" placeholder="Age" />
+            <input required type="text" name="age" placeholder="Age" />
           </p>
           <p>
             <input required type="email" name="email" placeholder="Email" />
@@ -45,7 +44,12 @@
             />
           </p>
           <p>
-            <input required type="number" name="balance" placeholder="User balance">
+            <input
+              required
+              type="text"
+              name="balance"
+              placeholder="User balance"
+            />
           </p>
           <!-- <p>
             <input
@@ -56,8 +60,8 @@
             />
           </p> -->
           <p>
-            <input type="button" class="save_info_button" value="save">
-            <input type="button" class="back_to_list_button" value="back">
+            <input type="button" class="save_info_button" value="save" />
+            <input type="button" class="back_to_list_button" value="back" />
           </p>
         </form>
       </template>
@@ -73,11 +77,14 @@
             <input type="text" name="price" placeholder="Price" />
           </p>
           <p>
-            <textarea name="characteristics" placeholder="Description"></textarea>
+            <textarea
+              name="characteristics"
+              placeholder="Description"
+            ></textarea>
           </p>
           <p>
-            <input type="button" class="save_info_button" value="save">
-            <input type="button" class="back_to_list_button" value="back">
+            <input type="button" class="save_info_button" value="save" />
+            <input type="button" class="back_to_list_button" value="back" />
           </p>
         </form>
       </template>
@@ -100,16 +107,19 @@
             </select>
           </p>
           <p>
-            <textarea name="characteristics" placeholder="Characteristics"></textarea>
+            <textarea
+              name="characteristics"
+              placeholder="Characteristics"
+            ></textarea>
           </p>
           <p>
-            <input type="button" class="save_info_button" value="save">
-            <input type="button" class="back_to_list_button" value="back">
+            <input type="button" class="save_info_button" value="save" />
+            <input type="button" class="back_to_list_button" value="back" />
           </p>
         </form>
       </template>
       <footer class="center"></footer>
-    </div> 
+    </div>
     <script src="js/createDOMelements.js"></script>
     <script src="js/functions.js"></script>
     <script src="js/Product.js"></script>
