стили и улучшение кода

--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
               placeholder="First name"
             />
           </p>
-          <!-- <p>
-            <input required type="text" name="lastname" placeholder="Last name" />
-          </p> -->
           <p>
             <input required type="text" name="age" placeholder="Age" />
           </p>
@@ -52,13 +49,11 @@
             />
           </p>
           <!-- <p>
-            <input
-              required
-              type="text"
-              name="cardnumber"
-              placeholder="Card number"
-            />
-          </p> -->
+            <textarea
+              name="bought_item"
+              placeholder="Bought_item"
+            ></textarea> -->
+          </p>
           <p>
             <input type="button" class="save_info_button" value="save" />
             <input type="button" class="back_to_list_button" value="back" />
