Добавил ошибку при покупке товара

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             />
           </p>
           <p>
-            <input required type="text" name="age" placeholder="Age" />
+            <input required type="number" name="age" placeholder="Age" />
           </p>
           <p>
             <input required type="email" name="email" placeholder="Email" />
@@ -43,7 +43,7 @@
           <p>
             <input
               required
-              type="text"
+              type="number"
               name="balance"
               placeholder="User balance"
             />
@@ -69,7 +69,7 @@
             <input type="number" name="count" placeholder="Count" />
           </p>
           <p>
-            <input type="text" name="price" placeholder="Price" />
+            <input type="number" name="price" placeholder="Price" />
           </p>
           <p>
             <textarea
@@ -92,7 +92,7 @@
             <input type="number" name="count" placeholder="Count" />
           </p>
           <p>
-            <input type="text" name="price" placeholder="Price" />
+            <input type="number" name="price" placeholder="Price" />
           </p>
           <p>
             <select name="transmission" id="transmission">
