Для тестового показа

--- a/index.html
+++ b/index.html
@@ -45,14 +45,8 @@
               required
               type="number"
               name="balance"
-              placeholder="User balance"
+              placeholder="User balance (Up to 1m)"
             />
-          </p>
-          <!-- <p>
-            <textarea
-              name="bought_item"
-              placeholder="Bought_item"
-            ></textarea> -->
           </p>
           <p>
             <input type="button" class="save_info_button" value="save" />
@@ -66,10 +60,10 @@
             <input type="text" name="name" placeholder="Titel of product" />
           </p>
           <p>
-            <input type="number" name="count" placeholder="Count" />
+            <input type="number" name="count" placeholder="Count (Up to 99)" />
           </p>
           <p>
-            <input type="number" name="price" placeholder="Price" />
+            <input type="number" name="price" placeholder="Price (Up to 1m)" />
           </p>
           <p>
             <textarea
@@ -89,10 +83,10 @@
             <input type="text" name="name" placeholder="Model" />
           </p>
           <p>
-            <input type="number" name="count" placeholder="Count" />
+            <input type="number" name="count" placeholder="Count (Up to 99)" />
           </p>
           <p>
-            <input type="number" name="price" placeholder="Price" />
+            <input type="number" name="price" placeholder="Price (Up to 1m)" />
           </p>
           <p>
             <select name="transmission" id="transmission">
