--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Auto-app</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./public/css/style.css"/>
   </head>
   <body>
     <div class="wrapper">
       <header class="center">
         <div class="logo">
-          <img src="images/auto.png" alt="auto" />
+          <img src="./src/images/auto.png" alt="auto" />
         </div>
         <div class="btn-wrapper"></div>
       </header>
@@ -109,12 +109,13 @@
       </template>
       <footer class="center"></footer>
     </div>
-    <script src="js/createDOMelements.js"></script>
-    <script src="js/functions.js"></script>
-    <script src="js/Product.js"></script>
-    <script src="js/User.js"></script>
-    <script src="js/Auto.js"></script>
-    <script src="js/data.js"></script>
-    <script src="js/app.js"></script>
+    <!-- <script src="./js/functions/createDOMelements.js"></script>
+    <script src="./js/functions/functions.js"></script>
+    <script src="./js/classes/Product.js"></script>
+    <script src="./js/classes/User.js"></script>
+    <script src="./js/classes/Auto.js"></script>
+    <script src="./js/data/data.js"></script>
+    <script src="./js/app.js"></script> -->
+    <script src="./public/build/build.js"></script>
   </body>
 </html>
